@@ -6,11 +6,13 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 08/01/2022
-Versão: 0.09
+Data de atualização: 10/01/2022
+Versão: 0.10
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CORREÇÕES DOS BUGS DOS SCRIPTS =============================================
+0010 - Falha de analise de Porta UDP utilizando o comando nc, acréscimo da opção u (UDP) nos scripts que utilizam o UDP
+
 0009 - Falha de resolução do DNS para endereços Externos executando o comando: ping google.com recebendo a mensagem no 
 terminal: Temporary failure in name resolution ou utilizando o comando: nslookup google.com recendo a mensagem no terminal:
 server can't find google.com: SERVFAIL, falha relacionada a Data e Hora do sistema, muitas vezes devido a restauração de
