@@ -1,47 +1,42 @@
-# envvars - default environment variables for apache2ctl
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 15/10/2021
+# Data de atualização: 05/11/2021
+# Versão: 0.02
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Apache2 v2.4.x
 
-# this won't be correct after changing uid
+# Configuração do Unset do Home do Apache2
 unset HOME
 
-# for supporting multiple apache2 instances
+# Configurações para suportar várias instâncias do Apache2
 if [ "${APACHE_CONFDIR##/etc/apache2-}" != "${APACHE_CONFDIR}" ] ; then
 	SUFFIX="-${APACHE_CONFDIR##/etc/apache2-}"
 else
 	SUFFIX=
 fi
 
-# Since there is no sane way to get the parsed apache2 config in scripts, some
-# settings are defined via environment variables and then used in apache2ctl,
-# /etc/init.d/apache2, /etc/logrotate.d/apache2, etc.
+# Configurações das variáveis ​​de ambiente utilizadas pelo Apache2
 export APACHE_RUN_USER=www-data
 export APACHE_RUN_GROUP=www-data
-# temporary state file location. This might be changed to /run in Wheezy+1
 export APACHE_PID_FILE=/var/run/apache2$SUFFIX/apache2.pid
 export APACHE_RUN_DIR=/var/run/apache2$SUFFIX
 export APACHE_LOCK_DIR=/var/lock/apache2$SUFFIX
-# Only /var/log/apache2 is handled by /etc/logrotate.d/apache2.
 export APACHE_LOG_DIR=/var/log/apache2$SUFFIX
 
-## The locale used by some modules like mod_dav
+# Configuração da localidade usada por alguns módulos como mod_dav
+# OBSERVAÇÃO: configurações utilizadas pelo Nextcloud de Locale
 export LANG=C
-## Uncomment the following line to use the system default locale instead:
 . /etc/default/locale
-
 export LANG
 
-## The command to get the status for 'apache2ctl status'.
-## Some packages providing 'www-browser' need '--dump' instead of '-dump'.
+# Configurações padrão do Apache2 Envvars, recomendado não alterar os valores
 #export APACHE_LYNX='www-browser -dump'
-
-## If you need a higher file descriptor limit, uncomment and adjust the
-## following line (default is 8192):
 #APACHE_ULIMIT_MAX_FILES='ulimit -n 65536'
-
-## If you would like to pass arguments to the web server, add them below
-## to the APACHE_ARGUMENTS environment.
 #export APACHE_ARGUMENTS=''
-
-## Enable the debug mode for maintainer scripts.
-## This will produce a verbose output on package installations of web server modules and web application
-## installations which interact with Apache
 #export APACHE2_MAINTSCRIPT_DEBUG=1
