@@ -6,10 +6,11 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 10/12//2021
-# Versão: 0.04
+# Data de atualização: 10/01/2022
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Mais informações veja o arquivo: scripts/settings/04-ConfiguracaoDoNetplan.sh
+# Após as configuração do endereço IPv4 digitar o comando: netplan --debug apply
 #
 # Configuração do Endereço IPv4 do Ubuntu Server
 network:
@@ -33,7 +34,7 @@ network:
         #- 172.16.1.20
         - 172.16.1.254
         #- 8.8.8.8
-        #- 8.8.8.8
+        #- 8.8.4.4
         # Configuração do Nome de Pesquisa do Domínio DNS do Ubuntu Server
         search:
         - pti.intra
